[tool.poetry]
name = "youtube-llm-app"
version = "0.1.0"
description = ""
authors = ["ivan golt <102701882+ivangolt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "youtube_llm_app"}]

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"
moviepy = "^1.0.3"
openai = "^1.51.0"
streamlit = "^1.39.0"
langchain = "^0.3.1"
chromadb = "^0.5.11"
transformers = "^4.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
